--- a/04_Hello_Map_Quiz.html
+++ b/04_Hello_Map_Quiz.html
@@ -9,19 +9,26 @@ API Course, Lesson 1 -->
    </style>
  </head>
  <body>
-   <!-- TODO 1: Create a place to put the map in the HTML-->
-   <div></div>
+   <!-- 1: Create a place to put the map in the HTML-->
+   <div id="map"></div>
    <script>
-     // TODO: Create a map variable
+     //2. Create a map variable
+     var map;
 
-     // TODO: Complete the following function to initialize the map
+     // 3. Complete the following function to initialize the map
      function initMap() {
-       // TODO: use a constructor to create a new map JS object. You can use the coordinates
+       // 4. use a constructor to create a new map JS object. You can use the coordinates
        // we used, 40.7413549, -73.99802439999996 or your own!
+       map = new google.maps.Map(document.getElementById('map'), {
+         center: {
+           lat: 43.199551,
+           lng: 27.917689
+         },
+         zoom: 16
+       });
      }
    </script>
-   <!--TODO: Load the JS API ASYNCHRONOUSLY below.-->
-   <script>
-   </script>
+   <!-- 5. Load the JS API ASYNCHRONOUSLY below.-->
+   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8Zg1KCtmv_PZCsR_BhgIYmV4sep78eyw&v=3&callback=initMap"></script>
  </body>
 </html>
