--- a/Project_Code_2_MakingYourMark.html
+++ b/Project_Code_2_MakingYourMark.html
@@ -21,6 +21,7 @@
       var map;
       function initMap() {
         // Constructor creates a new map - only center and zoom are required.
+        // https://youtu.be/Dzw4e5pYTj8
         map = new google.maps.Map(document.getElementById('map'), {
           center: {lat: 40.7413549, lng: -73.9980244},
           zoom: 13
@@ -29,14 +30,12 @@
         var marker = new google.maps.Marker({
           position: tribeca,
           map: map,
-          title: 'First Marker!'
+          title: 'This is my First Marker!'
         });
       }
     </script>
 
-    <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=MYAPIKEY&v=3&callback=initMap">
-    </script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8Zg1KCtmv_PZCsR_BhgIYmV4sep78eyw&v=3&callback=initMap"></script>
 
   </body>
 </html>
