Show/Hide markers on click of button

--- a/Project_Code_4_WindowShoppingPart2.html
+++ b/Project_Code_4_WindowShoppingPart2.html
@@ -128,6 +128,7 @@
         }
       }
 
+      // https://youtu.be/H6Y6fWNOTVc
       // This function will loop through the markers array and display them all.
       function showListings() {
         var bounds = new google.maps.LatLngBounds();
@@ -146,11 +147,6 @@
         }
       }
     </script>
-
-    <script async defer
-        src=
-        "https://maps.googleapis.com/maps/api/js?key=MYAPIKEY&v=3&callback=initMap">
-    </script>
-
+   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8Zg1KCtmv_PZCsR_BhgIYmV4sep78eyw&v=3&callback=initMap"></script>
   </body>
 </html>
