More on static maps topic

--- a/Project_Code_6_StaticMapsAndStreetViewImagery.html
+++ b/Project_Code_6_StaticMapsAndStreetViewImagery.html
@@ -234,6 +234,7 @@
           // Start new street view service
           // Static maps are not used here, but you can check: https://developers.google.com/maps/documentation/maps-static/intro
           // More about streetview API: https://developers.google.com/maps/documentation/streetview/intro
+          // Static Maps here: https://developers.google.com/maps/documentation/maps-static/dev-guide
           var streetViewService = new google.maps.StreetViewService();
 
           // Define a radius at which the street view API should look for streetview
