--- a/Project_Code_7_Drawing.html
+++ b/Project_Code_7_Drawing.html
@@ -260,6 +260,13 @@
           polygon.setEditable(true);
           // Searching within the polygon.
           searchWithinPolygon();
+
+          // How to calculate area: https://developers.google.com/maps/documentation/javascript/geometry#Distance
+          // Calculte are and alert it:
+          // polygon.getPath() - to get the vector locations
+          var area = google.maps.geometry.spherical.computeArea(polygon.getPath());
+          window.alert(area);
+          
           // Make sure the search is re-done if the poly is changed.
           polygon.getPath().addListener('set_at', searchWithinPolygon);
           polygon.getPath().addListener('insert_at', searchWithinPolygon);
