--- a/05_Interpreting Geocoding Responses.html
+++ b/05_Interpreting Geocoding Responses.html
@@ -59,18 +59,18 @@ and Google's Maps API Course, Lesson 2 -->
         geocoder.geocode({'address': address}, function(results, status) {
           if (status === google.maps.GeocoderStatus.OK) {
             resultsMap.setCenter(results[0].geometry.location);
-            //TODO: Insert code here to take the first result's formatted address, and LOCATION.
-            document.getElementById('firstComponent').innerHTML="The Formatted Address is:"; // PUT STUFF HERE
-            document.getElementById('secondComponent').innerHTML="The Location is"; // PUT STUFF HERE
+            // Insert code here to take the first result's formatted address, and LOCATION.
+            document.getElementById('firstComponent').innerHTML="The Formatted Address is: " + results[0].formatted_address; // PUT STUFF HERE
+            document.getElementById('secondComponent').innerHTML="The Location is " + results[0].geometry.location; // PUT STUFF HERE
           } else {
             alert('Geocode was not successful for the following reason: ' + status);
           }
         });
       }
     </script>
-    <!--TODO: Insert your API Key in the below call to load the API.-->
+    <!-- Insert your API Key in the below call to load the API.-->
     <script async defer
-     src="https://maps.googleapis.com/maps/api/js?v=3&key=XXX&callback=initMap">
+     src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyA8Zg1KCtmv_PZCsR_BhgIYmV4sep78eyw&callback=initMap">
     </script>
   </body>
 </html>
