--- a/Project_Code_10_DisplayingRoutesDirectionsService.html
+++ b/Project_Code_10_DisplayingRoutesDirectionsService.html
@@ -529,30 +529,42 @@
         }
       }
 
+      // https://youtu.be/6y30KtNvo2s
       // This function is in response to the user selecting "show route" on one
       // of the markers within the calculated distance. This will display the route
       // on the map.
       function displayDirections(origin) {
         hideListings();
+
+        // Create new directionsService object
         var directionsService = new google.maps.DirectionsService;
+
         // Get the destination address from the user entered value.
         var destinationAddress =
             document.getElementById('search-within-time-text').value;
+
         // Get mode again from the user entered value.
         var mode = document.getElementById('mode').value;
+
+        // Make request to Directions API.
+        // Assign request parameters as seen on: https://developers.google.com/maps/documentation/javascript/directions
         directionsService.route({
           // The origin is the passed in marker's position.
+          // Starting point  for directions. In this case is the marker/listing clicked.
           origin: origin,
           // The destination is user entered address.
           destination: destinationAddress,
           travelMode: google.maps.TravelMode[mode]
         }, function(response, status) {
           if (status === google.maps.DirectionsStatus.OK) {
+            console.log(response);
+            // This draws the route on the map
+            // It just needs the response from directions
             var directionsDisplay = new google.maps.DirectionsRenderer({
-              map: map,
+              map: map, // on which map to draw the directions
               directions: response,
               draggable: true,
-              polylineOptions: {
+              polylineOptions: { // how to look the directions line
                 strokeColor: 'green'
               }
             });
@@ -565,7 +577,7 @@
 
     <script async defer
         src=
-        "https://maps.googleapis.com/maps/api/js?libraries=geometry,drawing&key=MYAPIKEY&v=3&callback=initMap">
+        "https://maps.googleapis.com/maps/api/js?libraries=geometry,drawing&key=AIzaSyA8Zg1KCtmv_PZCsR_BhgIYmV4sep78eyw&v=3&callback=initMap">
     </script>
 
   </body>
