--- a/Project_Code_12_FasterIsBetterPlacesAutocompletePart2.html
+++ b/Project_Code_12_FasterIsBetterPlacesAutocompletePart2.html
@@ -122,6 +122,7 @@
           <input id="search-within-time" type="button" value="Go">
         </div>
         <hr>
+        <!-- Input that will hold the places' searchbox input -->
         <div>
           <span class="text">Search for nearby places</span>
           <input id="places-search" type="text" placeholder="Ex: Pizza delivery in NYC">
@@ -139,6 +140,7 @@
       // This global polygon variable is to ensure only ONE polygon is rendered.
       var polygon = null;
 
+      // https://youtu.be/zNJsj69DnAM?t=135
       // Create placemarkers array to use in multiple functions to have control
       // over the number of places that show.
       var placeMarkers = [];
@@ -228,10 +230,15 @@
             document.getElementById('zoom-to-area-text'));
         // Bias the boundaries within the map for the zoom to area text.
         zoomAutocomplete.bindTo('bounds', map);
+
+        // Assign the searchbox object to #places-search input
         // Create a searchbox in order to execute a places search
         var searchBox = new google.maps.places.SearchBox(
             document.getElementById('places-search'));
+
         // Bias the searchbox to within the bounds of the map.
+        // Suggest results only within the bounderies of the currently displayed map.
+        // https://youtu.be/zNJsj69DnAM?t=108
         searchBox.setBounds(map.getBounds());
 
         // These are the real estate listings that will be shown to the user.
@@ -312,12 +319,14 @@
           searchWithinTime();
         });
 
+        // https://youtu.be/zNJsj69DnAM?t=116
         // Listen for the event fired when the user selects a prediction from the
         // picklist and retrieve more details for that place.
         searchBox.addListener('places_changed', function() {
-          searchBoxPlaces(this);
+          searchBoxPlaces(this); // this holds the searchbox object containing the chosen option
         });
 
+        // https://youtu.be/zNJsj69DnAM?t=116
         // Listen for the event fired when the user selects a prediction and clicks
         // "go" more details for that place.
         document.getElementById('go-places').addEventListener('click', textSearchPlaces);
@@ -402,6 +411,7 @@
         map.fitBounds(bounds);
       }
 
+      // https://youtu.be/zNJsj69DnAM?t=149
       // This function will loop through the listings and hide them all.
       function hideMarkers(markers) {
         for (var i = 0; i < markers.length; i++) {
@@ -632,39 +642,62 @@
         });
       }
 
+      // https://youtu.be/zNJsj69DnAM?t=190
+      // @searchBox - object containing the selected places
       // This function fires when the user selects a searchbox picklist item.
       // It will do a nearby search using the selected query string or place.
       function searchBoxPlaces(searchBox) {
+        // Hide all currently displayed places Markers
         hideMarkers(placeMarkers);
+
+        // Extract all the places from searchBox object passed
         var places = searchBox.getPlaces();
         // For each place, get the icon, name and location.
         createMarkersForPlaces(places);
+
         if (places.length == 0) {
           window.alert('We did not find any places matching that search!');
         }
       }
 
+      // https://youtu.be/zNJsj69DnAM?t=237
       // This function firest when the user select "go" on the places search.
       // It will do a nearby search using the entered query string or place.
       function textSearchPlaces() {
+        // Capture the boundries of the map
         var bounds = map.getBounds();
+
+        // Hide all previously displayed places.
         hideMarkers(placeMarkers);
+
+        // Create new places service object to be able to use text search.
+        // Pass as argument the currently initiated map.
         var placesService = new google.maps.places.PlacesService(map);
+
+        // Make a search request
         placesService.textSearch({
+          // Get the value of search-box input html element and assign it to query.
           query: document.getElementById('places-search').value,
+          // Set the suggestions to be only from within displayed maps.
           bounds: bounds
         }, function(results, status) {
           if (status === google.maps.places.PlacesServiceStatus.OK) {
+            // If the request is successful invoke the method below with the results.
             createMarkersForPlaces(results);
           }
         });
       }
 
+      // https://youtu.be/zNJsj69DnAM?t=289
+      // Loop over the returned response from Places API
       // This function creates markers for each place found in either places search.
       function createMarkersForPlaces(places) {
         var bounds = new google.maps.LatLngBounds();
         for (var i = 0; i < places.length; i++) {
+          // Make accessing every place easier.
           var place = places[i];
+
+          // The response also holds link to icon for every place
           var icon = {
             url: place.icon,
             size: new google.maps.Size(35, 35),
@@ -672,19 +705,28 @@
             anchor: new google.maps.Point(15, 34),
             scaledSize: new google.maps.Size(25, 25)
           };
+
           // Create a marker for each place.
           var marker = new google.maps.Marker({
             map: map,
             icon: icon,
             title: place.name,
             position: place.geometry.location,
-            id: place.id
+            id: place.id // this will be used in next Project_Code_13 file to display more info about the place.
           });
+
           // If a marker is clicked, do a place details search on it in the next function.
           marker.addListener('click', function() {
           getPlacesDetails(this, place);
           });
+
+          // Add the place to placeMarkers which holds currently displayed places.
+          // It is used to hide the place previously displayed.
           placeMarkers.push(marker);
+
+          // Adjust the bounds of the map,
+          // to make every place fit within the currently displayed map.
+          // https://youtu.be/zNJsj69DnAM?t=335
           if (place.geometry.viewport) {
             // Only geocodes have viewport.
             bounds.union(place.geometry.viewport);
@@ -695,10 +737,10 @@
         map.fitBounds(bounds);
       }
     </script>
-
+    <!-- Do not forget to import places library (libraries=places) -->
     <script async defer
         src=
-        "https://maps.googleapis.com/maps/api/js?libraries=places,geometry,drawing&key=MYAPIKEY&v=3&callback=initMap">
+        "https://maps.googleapis.com/maps/api/js?libraries=places,geometry,drawing&key=AIzaSyA8Zg1KCtmv_PZCsR_BhgIYmV4sep78eyw&v=3&callback=initMap">
     </script>
 
   </body>
